--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "jw-angular-pagination": "^1.2.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.4.7",
     "tslib": "^2.2.0",
